--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -38,9 +38,8 @@
         android:layout_height="wrap_content"
         android:text="New Text"
         android:id="@+id/textView3"
-        android:layout_below="@+id/yoshiButton"
-        android:layout_toRightOf="@+id/textView"
-        android:layout_toEndOf="@+id/textView"
-        android:layout_marginTop="155dp" />
+        android:layout_alignBaseline="@+id/textView2"
+        android:layout_alignBottom="@+id/textView2"
+        android:layout_centerHorizontal="true" />
 
 </RelativeLayout>
