--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,10 +12,10 @@
         android:layout_height="wrap_content"
         android:text="@string/Next"
         android:id="@+id/nextButton"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginTop="138dp" />
+        android:layout_marginTop="94dp"
+        android:layout_below="@+id/questionText"
+        android:layout_toRightOf="@+id/questionText"
+        android:layout_toEndOf="@+id/questionText" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -23,9 +23,16 @@
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="Large Text"
         android:id="@+id/questionText"
-        android:layout_alignBottom="@+id/nextButton"
-        android:layout_toRightOf="@+id/nextButton"
-        android:layout_toEndOf="@+id/nextButton"
-        android:layout_marginLeft="75dp"
-        android:layout_marginStart="75dp" />
+        android:layout_marginTop="162dp"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Prev"
+        android:id="@+id/prevButton"
+        android:layout_alignTop="@+id/nextButton"
+        android:layout_toLeftOf="@+id/questionText"
+        android:layout_toStartOf="@+id/questionText" />
 </RelativeLayout>
