--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -3,4 +3,6 @@
     xmlns:tools="http://schemas.android.com/tools" tools:context="yoshi.memorizey.MainActivity">
     <item android:id="@+id/action_settings" android:title="@string/action_settings"
         android:orderInCategory="100" app:showAsAction="never" />
+    <item android:id="@+id/action_file" android:title="@string/action_file"
+        android:orderInCategory="100" app:showAsAction="never" />
 </menu>
